# land-renting-system-in-oop

./: CMakeLists.txt  main.cpp  readme.md
include/: Invoice.h  LandParcel.h  LandRentingSystem.h  Rental.h
src/: Invoice.cpp  LandParcel.cpp  LandRentingSystem.cpp  Rental.cpp
